# industrial-sensor-fusion

./: .gitignore  pyproject.toml
configs/: config.yaml
notebooks/: 01_eda.ipynb
src/data/: labels.py  loader.py
src/features/: freq_domain.py  pipeline.py  time_domain.py
src/fusion/: fuser.py
